# Randevoo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linters.yml
app/: manage.py
app/accounts/: models.py
app/accounts/migrations/: 0001_initial.py
app/core/: models.py
app/feedback/: models.py
app/feedback/migrations/: 0001_initial.py
app/meets/: admin.py  apps.py  models.py
app/meets/migrations/: 0001_initial.py
app/randevoo/: settings.py  wsgi.py
