[tool.black]
line-length = 100
exclude = "migrations"
diff = true
color = true

[tool.flake8]
inline-quotes = "double"
docstring-quotes = "double"
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist,migrations"
import-order-style = "google"
max-line-length = 100

[tool.poetry]
name = "randevoo"
version = "0.1.0"
description = ""
authors = ["TabarakoAkula"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
python-dotenv = "^1.0.1"
django-cleanup = "^9.0.0"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
flake8-pyproject = "^1.2.3"
markdown = "^3.7"
django-filter = "^24.3"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-absolute-import = "^1.0.0.2"
flake8-broken-line = "^1.0.0"
flake8-builtins = "^2.5.0"
flake8-commas = "^4.0.0"
flake8-import-order = "^0.18.2"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.4.0"
flake8-return = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
